add email by zhc 2

--- a/templates/about.html
+++ b/templates/about.html
@@ -32,6 +32,8 @@
       result += document.getElementById('name1').value.toString();
       result += "\nphone:\n";
       result += document.getElementById('phone1').value.toString();
+      result += "\nemail:\n";
+      result += document.getElementById('email1').value.toString();
       result += "\nmessage:\n";
       result += document.getElementById('message1').value.toString();
       //result = result.replace("@", " at ");
